syntax = "proto3"; 

option csharp_namespace = "Viking.AnnotationServiceTypes.gRPC.V1.Protos";

package Viking.AnnotationServiceTypes.gRPC.V1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message AnnotationPoint { 
  double x = 1;
  double y = 2;
  optional double z = 3;
}

message Geometry {
	oneof Encoding {
		string text = 1;
		bytes binary = 2;
	}
}

message AxisUnits{
    string Units = 1; //nm, mm, etc...
    double Value = 2; //Scale, ie 5 nm
}

message Scale {
    AxisUnits x = 1;
    AxisUnits y = 2;
    optional AxisUnits z = 3;
}

message BoundingRectangle {

  double xmin = 1;
  double ymin = 2;
  double xmax = 3;
  double ymax = 4;
}

enum AnnotationType
{
    POINT = 0;
    CIRCLE = 1;
    ELLIPSE = 2;
    POLYLINE = 3;
    POLYGON = 4;     //Polygon, no smoothing of exterior verticies with curve fitting
    OPENCURVE = 5;   //Line segments with a line width, additional control points created using curve fitting function
    CURVEPOLYGON = 6; //Polygon whose outer and inner verticies are supplimented with a curve fitting function
    CLOSEDCURVE = 7; //Ring of line segments with a line width
} 
 
enum DBAction
{
    NONE = 0;
    INSERT = 1;
    UPDATE = 2;
    DELETE = 3;
}
 
message StructureType {
  int64 id = 1;
  optional int64 parent_id = 2;
  int64 type_id = 3;
  string name = 4;
  string notes = 5;
  string attributes = 7;
  string structure_attributes = 8;
  bool abstract = 9;
  int32 color = 10;
  string code = 11;
  string username = 12;
  google.protobuf.Timestamp created = 15;
  google.protobuf.Timestamp last_modified = 16;
  int32 AllowedShapes = 17;
}

message Structure {
  int64 id = 1;
  optional int64 parent_id = 2;
  int64 type_id = 3;
  string notes = 4;
  bool verified = 5;
  string attributes = 6;
  double confidence = 7;
  repeated StructureLink links = 8;
  repeated int64 child_ids = 9;
  string label = 10;
  string username = 11;
  google.protobuf.Timestamp created = 12;
  google.protobuf.Timestamp last_modified = 13;
}

message StructureLink {

  int64 source_id = 1;
  int64 target_id = 2;
  bool bidirectional = 3;
  string tags = 4;
  string username = 5;
}


message LocationLink {

  int64 source_id = 1;
  int64 target_id = 2;
}

message Location {

  int64 id = 1;
  optional int64 parent_id = 2;
  int64 section = 3;
  AnnotationPoint mosaic_position = 4;
  AnnotationPoint volume_position = 5;
  Geometry mosaic_shape = 6;
  Geometry volume_shape = 7;
  bool closed = 8;
  string attributes = 9;
  repeated int64 links = 10;
  bool terminal = 11;
  bool off_edge = 12;
  double radius = 13;
  google.protobuf.DoubleValue width = 14;
  AnnotationType type_code = 15;
  google.protobuf.Timestamp created = 16;
  google.protobuf.Timestamp last_modified = 17;
  string username = 18;
}


message PermittedStructureLink { 
  int64 source_type_id = 1;
  int64 target_type_id = 2;
  bool bidirectional = 3;
}
