//
// This Protobuf definition was generated by Visual ReCode 2.0.3.1140
//
syntax = "proto3";

option csharp_namespace = "Viking.AnnotationServiceTypes.gRPC.V1.Protos";

package Viking.AnnotationServiceTypes.gRPC.V1;

import "Protos/AnnotationTypes.proto";
import "google/protobuf/timestamp.proto";

service PermittedStructureLinks {
  rpc GetPermittedStructureLinks (GetPermittedStructureLinksRequest) returns (GetPermittedStructureLinksResponse);
  rpc CreatePermittedStructureLink (CreatePermittedStructureLinkRequest) returns (CreatePermittedStructureLinkResponse);
  rpc UpdatePermittedStructureLinks (UpdatePermittedStructureLinksRequest) returns (UpdatePermittedStructureLinksResponse); 
}

message GetPermittedStructureLinksRequest { }

message GetPermittedStructureLinksResponse {
	repeated PermittedStructureLink permitted_links = 1;
}

message CreatePermittedStructureLinkRequest {
	PermittedStructureLink new_obj = 1;
}

message CreatePermittedStructureLinkResponse {
	PermittedStructureLink result = 1;
}

message PermittedStructureLinkChange {
		DBAction action = 1;
		PermittedStructureLink result = 2;
}

message PermittedStructureLinkChangeResponse {
		DBAction action = 1; //The change that was performed
		bool Sucess = 2;     //True if the change was applied
		optional PermittedStructureLink result = 3; //The updated row from the database
}
 
message UpdatePermittedStructureLinksRequest {
	repeated PermittedStructureLinkChange changes = 1;
}

message UpdatePermittedStructureLinksResponse { 
	repeated PermittedStructureLinkChangeResponse changes = 1;
}